--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <body>
         <h1>Hello world.</h1>
+        <script type="text/javascript">
+            console.log("I am here.");
+        </script>
     </body>
 </html>
